--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     },
     "homepage": "https://github.com/CarlosAMolina/contacts-cli-js#readme",
     "dependencies": {
+        "graphql-request": "^7.2.0",
         "yargs": "^18.0.0"
     },
     "devDependencies": {
