--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "scripts": {
         "lint": "npx eslint .",
         "lint:fix": "npx eslint --fix .",
-        "start": "node index.js",
+        "start": "node index.js c john",
         "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
         "testFilter": "node --experimental-vm-modules node_modules/jest/bin/jest.js -t 'integer'"
     },
